Cleanup sonar issues

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/area-restrictions-details-panel/area-restrictions-details-panel.component.html
@@ -4,6 +4,7 @@
   </div>
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set" formGroupName="contact" *ngFor = "let item of areaRestrictions">
+      <legend>Area Restriction Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
