--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -22,16 +22,16 @@
     <h1>MORE INFORMATION</h1>
     <article>
         <p>
-            <a href="https://www.emergencyinfobc.gov.bc.ca/" target="_blank">Current Evacuation Advisories</a>
+            <a href="https://www.emergencyinfobc.gov.bc.ca/" target="_blank" rel="noopener">Current Evacuation Advisories</a>
         </p>
         <p>
-            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance" target="_blank">Evacuee Guidance</a>
+            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance" target="_blank" rel="noopener">Evacuee Guidance</a>
         </p>
         <p>
-            <a href="https://www2.gov.bc.ca/gov/content/governments/local-governments/facts-framework/systems " target="_blank">Local Government System in B.C</a>
+            <a href="https://www2.gov.bc.ca/gov/content/governments/local-governments/facts-framework/systems" target="_blank" rel="noopener">Local Government System in B.C</a>
         </p>
         <p>
-            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/emergency-alerts " target="_blank">B.C. Emergency Alerts</a>
+            <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/emergency-alerts" target="_blank" rel="noopener">B.C. Emergency Alerts</a>
         </p>
 
     </article>
