--- a/client/wfnews-war/src/main/angular/src/app/components/panel-fire-danger/panel-fire-danger.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-fire-danger/panel-fire-danger.component.html
@@ -27,6 +27,6 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-situation/fire-danger " target="_blank">Learn more about Fire Danger Rating</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-situation/fire-danger " target="_blank" rel="noopener">Learn more about Fire Danger Rating</a></p>
     </article>
 </section>
