--- a/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-smoke-forecast/panel-smoke-forecast.component.html
@@ -2,7 +2,7 @@
 <section>
     <h1>LEGEND & DEFINITIONS</h1>
     <article>
-        <img src="../../../assets/images/firesmoke-legend.png" />
+        <img alt="Firesmoke Legend" src="../../../assets/images/firesmoke-legend.png" />
         <h3>Smoke Forecast</h3>
         <p class="paragraph-format">
           The unit of measure for our smoke forecasts is "micrograms of PM2.5 per cubic meter (µg/m³)" at ground level. PM2.5 (particulate matter 2.5) is fine inhalable particles that are 2.5 micrometers and smaller. PM2.5 poses the highest risk to health from smoke, and the Canadian Council of Ministers of the Environment (CCME) in their most recent air quality report has set the following standards for exposure to this carcinogen:
@@ -34,8 +34,8 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a href="https://www2.gov.bc.ca/gov/content/environment/air-land-water/air/air-quality/aqhi" target="_blank">BC Air Quality Health Index</a></p>
-        <p><a href="https://firesmoke.ca/forecasts/ " target="_blank">Smoke Forecast Map</a></p>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-situation/air-quality" target="_blank">Wildfires and Air Quality</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/environment/air-land-water/air/air-quality/aqhi" target="_blank" rel="noopener">BC Air Quality Health Index</a></p>
+        <p><a href="https://firesmoke.ca/forecasts/ " target="_blank" rel="noopener">Smoke Forecast Map</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/wildfire-situation/air-quality" target="_blank" rel="noopener">Wildfires and Air Quality</a></p>
     </article>
 </section>
