--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -1,6 +1,7 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set">
+      <legend>Incident Info Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
@@ -33,6 +34,7 @@
   </mat-card>
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set">
+      <legend>Incident Size Fields</legend>
       <div class="news-form">
         <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
@@ -62,6 +64,7 @@
   </mat-card>
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set">
+      <legend>Incident Cause Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-form-field appearance="standard" floatLabel="always">
