--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/response-details-panel/response-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/response-details-panel/response-details-panel.component.html
@@ -1,6 +1,7 @@
 <ng-container [formGroup]="formGroup" class="incident-form">
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set">
+      <legend>Response Fields</legend>
       <div class="news-form">
         <div class="field size-full">
           <mat-form-field class="item-full-width" appearance="outline" floatLabel="always">
@@ -21,6 +22,7 @@
       Wildfire Crews
     </mat-card-title>
     <fieldset class="field-set">
+      <legend>Response Crews Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-checkbox formControlName="wildifreCrewsInd" class="example-margin">Wildfire Crews</mat-checkbox>
@@ -44,6 +46,7 @@
       Aviation
     </mat-card-title>
     <fieldset class="field-set">
+      <legend>Response Aviation Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-checkbox formControlName="aviationInd" class="example-margin">Wildfire Aviation</mat-checkbox>
@@ -67,6 +70,7 @@
       Incident Management Teams
     </mat-card-title>
     <fieldset class="field-set">
+      <legend>Response Management Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-checkbox formControlName="incidentManagementInd" class="example-margin">Incident Management Teams</mat-checkbox>
@@ -90,6 +94,7 @@
       Heavy Equipment
     </mat-card-title>
     <fieldset class="field-set">
+      <legend>Response Heavy Equipment Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-checkbox formControlName="heavyEquipmentInd" class="example-margin">Heavy Equipment</mat-checkbox>
@@ -113,6 +118,7 @@
       Structure Protection
     </mat-card-title>
     <fieldset class="field-set">
+      <legend>Response Structure Fields</legend>
       <div class="news-form">
         <div class="field size-third">
           <mat-checkbox formControlName="structureProtectionInd" class="example-margin">Structure Protection Units</mat-checkbox>
