--- a/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
@@ -33,8 +33,8 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions" target="_blank">Current Fire Bans and Restrictions</a></p>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/forest-use-restrictions" target="_blank">Learn lore about Forest Use Restrictions</a></p>
-        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/open-burning" target="_blank">Learn more about Open Burning</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions" target="_blank" rel="noopener">Current Fire Bans and Restrictions</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/forest-use-restrictions" target="_blank" rel="noopener">Learn lore about Forest Use Restrictions</a></p>
+        <p><a href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/fire-bans-and-restrictions/open-burning" target="_blank" rel="noopener">Learn more about Open Burning</a></p>
     </article>
 </section>
