--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -1,7 +1,7 @@
 <div>
     <p class="dashboard-title">Dashboard: {{currentYearString}}</p>
-    <p class ="active-incidents" ><b> {{collectionData? collectionData.length : null}} ACTIVE</b> Fire Incidents</p> 
-    <p class="datetime"> {{currentDateTimeString}}</p>     
+    <p class ="active-incidents" ><strong> {{collectionData? collectionData.length : null}} ACTIVE</strong> Fire Incidents</p>
+    <p class="datetime"> {{currentDateTimeString}}</p>
 </div>
 
 <div class="table-search-header flex-y-fixed">
@@ -55,7 +55,8 @@
     <table style = "width: fit-content;" mat-table matSort [dataSource]="collectionData | paginate:config"
             [matSortActive]="this.searchState.sortParam"
             [matSortDirection]="this.searchState.sortDirection.toLowerCase()"
-            (matSortChange)="sortData($event)">
+            (matSortChange)="sortData($event)"
+            aria-label="Incident Table">
         <ng-container matColumnDef = "fireNumber">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fire Number</th>
             <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="selectIncident(item)"><span #el >{{item.incidentNumberSequence}}</span></td>
