Initial Table, attachment API call

--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -45,7 +45,7 @@
         <div class="field size-unset">
           <mat-form-field appearance="standard" floatLabel="always">
             <mat-label class="label">Size</mat-label>
-            <input matInput class="disabled-input" type="text" placeholder="Size" formControlName="size" disabled>
+            <input matInput class="disabled-input" type="text" placeholder="Size" formControlName="sizeHectares" disabled>
           </mat-form-field>
         </div>
         <div class="field size-full">
