--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -62,5 +62,7 @@
     <ckeditor [editor]="Editor" [data]="incident.incidentOverview" (ready)="onReady($event)"></ckeditor>
   </mat-tab>
   <mat-tab label="Image/Video Gallery">Image/Video Gallery</mat-tab>
-  <mat-tab label="Maps">Maps</mat-tab>
+  <mat-tab label="Maps">
+    <maps-panel [incident]="currentAdminIncident"></maps-panel>
+  </mat-tab>
 </mat-tab-group>
