map layers button fixed

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -55,9 +55,11 @@
             <span class="hide">Evacuation Orders and Alerts</span>
         </div>
 
-        <div class="item" [class.active]="selectedLayer === 'area-restrictions'"
-            (click)="onSelectLayer( 'area-restrictions' )">
-            <wf-icon class="icon" iconName="wf/map-signs" iconSize="small"></wf-icon>
+        <div class="item"
+            [class.active]="selectedLayer === 'area-restrictions'"
+            (click)="onSelectLayer( 'area-restrictions' )"
+        >   
+            <span class="icon signpost mat-icon"></span>
             <span class="hide">Area Restrictions</span>
         </div>
 
