Font family adjust

--- a/client/wfnews-war/src/main/angular/src/app/components/message-dialog/message-dialog.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/message-dialog/message-dialog.component.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
+  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 
   h1 {
     color: #ff4545;
