--- a/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
@@ -7,7 +7,7 @@
         <div class="list-rows paragraph-format">
           <ul>
             <li>Any fire larger than 2 metres high and 3 metres wide</li>
-            <li>3 or more concurrently burning piles each no larger than 2 metres height and 3 metres wide</li>
+            <li>3 or more concurrently burning piles each no larger than 2 metres high and 3 metres wide</li>
             <li>1 or more burning windrows</li>
             <li>Stubble or grass burning over an area greater than 0.2 hectares</li>
           </ul>
