--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.html
@@ -1,6 +1,6 @@
 <div>
     <p class="dashboard-title">Dashboard: {{currentYearString}}</p>
-    <p class ="active-incidents" ><b> {{collection? collection.totalRowCount : null}} ACTIVE</b> Fire Incidents</p> 
+    <p class ="active-incidents" ><strong> {{collectionData? collectionData.length : null}} ACTIVE</strong> Fire Incidents</p>
     <p class="datetime"> {{currentDateTimeString}}</p>     
 </div>
 
