--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -61,7 +61,12 @@
   <mat-tab label="Incident Overview">
     <ckeditor [editor]="Editor" [data]="incident.incidentOverview" (ready)="onReady($event)"></ckeditor>
   </mat-tab>
-  <mat-tab label="Image/Video Gallery">Image/Video Gallery</mat-tab>
+  <mat-tab label="Image Gallery">
+    <image-gallery-panel [incident]="currentAdminIncident"></image-gallery-panel>
+  </mat-tab>
+  <mat-tab label="Video Gallery">
+    
+  </mat-tab>
   <mat-tab label="Maps">
     <maps-panel [incident]="currentAdminIncident"></maps-panel>
   </mat-tab>
