--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/upload-image-dialog/upload-image-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/upload-image-dialog/upload-image-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-container">
-  <h1 mat-dialog-title>Upload Map</h1>
+  <h1 mat-dialog-title>Upload Image</h1>
   <div class="dialog-content" mat-dialog-content>
-    <input #pdfInput hidden="true" type="file" onclick="this.value=null" (change)="pdfInputChange($event)" accept=".pdf"/>
+    <input #pdfInput hidden="true" type="file" onclick="this.value=null" (change)="pdfInputChange($event)" accept="image/*"/>
     <button mat-flat-button color="primary" (click)="pdfInput.click()">Browse</button>
     <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
       <mat-label class="label">Title</mat-label>
