--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/edit-image-dialog/edit-image-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/edit-image-dialog/edit-image-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog-container">
-  <h1 mat-dialog-title>Edit Map Title</h1>
+  <h1 mat-dialog-title>Edit Image Title</h1>
   <div class="dialog-content" mat-dialog-content>
     <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
       <mat-label class="label">Title</mat-label>
