--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/image-gallery-panel/image-card-component/image-card-panel.component.scss
@@ -4,12 +4,17 @@
   width: 650px;
   margin: 16px;
 
-  img {
+  .image-container {
     width: 60%;
     height: 250px;
     padding: 7px;
-    object-fit: cover;
-    border-radius: 10px;
+
+    img {
+      max-width: 350px;
+      height: inherit;
+      object-fit: cover;
+      border-radius: 10px;
+    }
   }
 
   .info-panel {
