wfnews-455 and config update

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -184,7 +184,7 @@
 }
 
 mat-expansion-panel-header {
-  background-color: #F1F1F3;
+  background-color: white
 }
 
 mat-panel-title {
@@ -214,7 +214,7 @@ mat-panel-title {
   color: #1c5a97;
   padding: 10px 20px;
   margin-bottom: 10px;
-  background-color: #f1f1f3;
+  background-color: white
 }
 
 @media screen and (max-width: 768px) {
