--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -1,3 +1,20 @@
+::ng-deep .wildfires-tabs{
+    .mat-tab-label.mat-tab-label-active {
+        border-radius: 40px;
+        background-color:#1a5a96;
+        color:white !important;
+        opacity: 1;
+    }
+    .mat-tab-label{
+        opacity: 1;
+        color: #1a5a96;
+        height: 36px;
+    }
+    .mat-ink-bar{
+        background-color: white !important
+    }
+}
+
 .mat-raised-button {
     box-shadow: none;
 }
