--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -4,6 +4,7 @@
         background-color:#1a5a96;
         color:white !important;
         opacity: 1;
+        font-weight: 700;
     }
     .mat-tab-label{
         opacity: 1;
