--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.scss
@@ -1,4 +1,7 @@
 ::ng-deep .wildfires-tabs{
+    .mat-tab-header{
+     border-bottom: none;   
+    }
     .mat-tab-label.mat-tab-label-active {
         border-radius: 40px;
         background-color:#1a5a96;
