basic checkboxs in wildfire list tab

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -64,7 +64,12 @@
             </section>
         </mat-tab>
     <mat-tab label="Wildfires List">
-        wildfire list coming 
+        <div>Choose Wildfires to display</div>
+        <div>
+            <mat-checkbox class="example-margin">Active Wildfires</mat-checkbox>
+            <mat-checkbox class="example-margin">Wildfires of Note</mat-checkbox>
+            <mat-checkbox class="example-margin">Wildfires that are 'Out'</mat-checkbox>
+        </div>
     </mat-tab>
 
 </mat-tab-group>
