--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -184,7 +184,7 @@
 }
 
 mat-expansion-panel-header {
-  background-color: #F1F1F3;
+  background-color: white
 }
 
 mat-panel-title {
@@ -209,12 +209,12 @@ mat-panel-title {
 }
 
 ::ng-deep .panel-header {
-  font-size: 15px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 400;
   color: #1c5a97;
   padding: 10px 20px;
   margin-bottom: 10px;
-  background-color: #f1f1f3;
+  background-color: white
 }
 
 @media screen and (max-width: 768px) {
