some styling update request by UX designer

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -32,6 +32,10 @@
           display: flex;
           align-items: center;
 
+          input{
+            margin-top:0 !important
+          }
+
           .input-clear-button{
             position: absolute;
             margin-left: 140px;
