--- a/client/wfnews-war/src/main/angular/src/styles/_smk.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_smk.scss
@@ -38,3 +38,13 @@
         }
     }
 }
+
+.smk-feature-list .smk-layer .smk-feature {
+  text-decoration: underline;
+  color: #1a5a96;
+  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+}
+
+.smk-theme-wf .smk-command.smk-icon {
+  display: none;
+}
